fix issue with contact screen going behind navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,10 @@ a:hover {
   text-decoration: none;
 }
 
+#contact{
+  height: 5em;
+}
+
 @media only screen and (max-width: 700px) {
   .nameText {
     font-size: 30px;
