--- a/client/src/components/Contact/style.css
+++ b/client/src/components/Contact/style.css
@@ -27,7 +27,7 @@
     margin-left:auto;
     margin-right:auto;
     padding:1em;
-    margin-bottom: 10em;
+    margin-bottom: 15em;
     opacity: .93;
     
     
